@@ -1,3 +1,9 @@
+2007-02-17  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #3348]
+	* malloc/memusage.sh: Cleanups.
+	* debug/xtrace.sh: Quoting and trap changes.
+
 2007-02-16  Ulrich Drepper  <drepper@redhat.com>
 
 	* locale/iso-3166.def: Add entry for Serbia.
